updated to include mailchimp form and basic styling.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-<meta name="google-site-verification" content="Htdw43TbAVn_eipKcBT9-KCUBXTcFzr3t3JmAcoA7Qk" />
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Design Coop</title>
+<meta name="description" content="The design cooperative: Fresh ideas, served daily.">
+
+<link rel="canonical" href="http://designcoop.co/">
+<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+
+<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Proza+Libre" rel="stylesheet">
+<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+
+
+</style>
+</head>
+
+<body>
+<div style="width:60%; margin:auto; padding-top:60px;">
+<header >
+<h1><a class="site-title" href="/">Design Cooperative</a></h1>
+</header>
+
+<p>We believe a worker-run cooperative can transform lives and communities.<p>
+
+<p>It's our mission to make design methods for problem solving available to all through accessible apprenticeship.</p>
+
+<p>Stay in the loop and shape the future of the coop through meetups and online conversation fall 2017.</p>
+
+<div id="mc_embed_signup">
+<form action="//designcoop.us16.list-manage.com/subscribe/post?u=627516cb06df0fe4a21fc42a6&amp;id=efb9220fe6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<label for="mce-EMAIL">Email address</label>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_627516cb06df0fe4a21fc42a6_efb9220fe6" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+
+
+<footer>
+
+&copy; 2017 Design Cooperative
+</footer>
+
+</div>
+</body>
+</html>
