changing up colors and look a bit.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
 <style type="text/css">
 	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+	We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 
+	body {background-color:#B3B3B3;}
+	h1,h2,h3,h4,h5,h6 {color:#2ae;font-family:"Cormorant Garamond",sans-serif;font-weight:600}
+	p,li {color:#562800;font-family:"Proza Libre",sans-serif;font-weight:400;line-height:1.42857}
+	a {color:#FF007F;text-decoration:none}
+	a:visited {color:#0e7eb6}
+	a:hover {color:#562800;text-decoration:underline}
+	ul {list-style:none;text-align:center;padding:0;margin:0}
+	li {float:left;margin:0;padding:0 1em 0 0;text-align:left;text-decoration:none}
 
 </style>
 </head>
