more color updates

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Design Coop</title>
+<title>the Design Cooperative</title>
 <meta name="description" content="The design cooperative: Fresh ideas, served daily.">
 
 <link rel="canonical" href="http://designcoop.co/">
@@ -15,26 +15,28 @@
 <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
 
 <style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+	#mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 	We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 
-	body {background-color:#B3B3B3;}
-	h1,h2,h3,h4,h5,h6 {color:#2ae;font-family:"Cormorant Garamond",sans-serif;font-weight:600}
-	p,li {color:#562800;font-family:"Proza Libre",sans-serif;font-weight:400;line-height:1.42857}
+	body {background-color:#eaeaef}
+	h1,h2,h3,h4,h5,h6 {color:#2ae;font-family:"Cormorant Garamond",sans-serif;font-size:48px;font-weight:700;}
+	footer, p,li {color:#562800;font-family:"Proza Libre",sans-serif;font-size: 24px;font-weight:400;line-height:1.42857}
 	a {color:#FF007F;text-decoration:none}
-	a:visited {color:#0e7eb6}
-	a:hover {color:#562800;text-decoration:underline}
+	a:visited {color:#FF117F}
+	a:hover {color:#FF88BF;text-decoration:underline}
 	ul {list-style:none;text-align:center;padding:0;margin:0}
 	li {float:left;margin:0;padding:0 1em 0 0;text-align:left;text-decoration:none}
+	label {margin-right: 1em;}
+
+	footer { padding-top:60px;color:#777;font-size:16px;}
 
 </style>
 </head>
-
 <body>
-<div style="width:60%; margin:auto; padding-top:60px;">
-<header >
-<h1><a class="site-title" href="/">Design Cooperative</a></h1>
+<div style="width:60%; margin:auto; padding-top:47px;">
+<header>
+<h1><a href="/">the Design Cooperative</a></h1>
 </header>
 
 <p>We believe a worker-run cooperative can transform lives and communities.<p>
@@ -59,7 +61,6 @@
 
 
 <footer>
-
 &copy; 2017 Design Cooperative
 </footer>
 
