--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
 	footer { padding-top:60px;color:#777;font-size:16px;}
 
+	#mc-embedded-subscribe { background:#FF007F; color:#FFF;}
+
 </style>
 </head>
 <body>
@@ -48,7 +50,6 @@
 <div id="mc_embed_signup">
 <form action="//designcoop.us16.list-manage.com/subscribe/post?u=627516cb06df0fe4a21fc42a6&amp;id=efb9220fe6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Email address</label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_627516cb06df0fe4a21fc42a6_efb9220fe6" tabindex="-1" value=""></div>
