still styling buttons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	body {background-color:#eaeaef}
 	h1,h2,h3,h4,h5,h6 {color:#2ae;font-family:"Cormorant Garamond",sans-serif;font-size:48px;font-weight:700;}
-	footer, p,li {color:#562800;font-family:"Proza Libre",sans-serif;font-size: 24px;font-weight:400;line-height:1.42857}
+	footer, p,li {color:#562800;font-family:"Proza Libre",sans-serif;font-size:20px;font-weight:400;line-height:1.42857}
 	a {color:#FF007F;text-decoration:none}
 	a:visited {color:#FF117F}
 	a:hover {color:#FF88BF;text-decoration:underline}
@@ -31,7 +31,7 @@
 
 	footer { padding-top:60px;color:#777;font-size:16px;}
 
-	#mc-embedded-subscribe { background:#FF007F; color:#FFF;}
+	#mc-embedded-subscribe { background:#FF007F; color:#FFF; font-size: 16px;}
 
 </style>
 </head>
