--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Proza+Libre" rel="stylesheet">
-<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<!-- <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+ -->
+ <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 
 <style type="text/css">
-	#mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 
-	body {background-color:#eaeaef}
+	body {background-color:#eaeaef;font-family:"Proza Libre",sans-serif}
 	h1,h2,h3,h4,h5,h6 {color:#2ae;font-family:"Cormorant Garamond",sans-serif;font-size:48px;font-weight:700;}
-	footer, p,li {color:#562800;font-family:"Proza Libre",sans-serif;font-size:20px;font-weight:400;line-height:1.42857}
+	footer, p, li {color:#562800;font-family:"Proza Libre",sans-serif;font-size:20px;font-weight:400;line-height:1.42857}
+
 	a {color:#FF007F;text-decoration:none}
 	a:visited {color:#FF117F}
 	a:hover {color:#FF88BF;text-decoration:underline}
@@ -31,12 +31,16 @@
 
 	footer { padding-top:60px;color:#777;font-size:16px;}
 
-	#mc-embedded-subscribe { background:#FF007F; color:#FFF; font-size: 16px;}
+
+	#mc_embed_signup{ clear:left; font-size: 20px; width:100%;}
+	#mc-embedded-subscribe { background:#FF007F; color:#FFF; font-size: 20px;}
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 
 </style>
 </head>
 <body>
-<div style="width:60%; margin:auto; padding-top:47px;">
+<div style="width:65%; margin:auto; padding-top:47px;">
 <header>
 <h1><a href="/">the Design Cooperative</a></h1>
 </header>
@@ -50,6 +54,7 @@
 <div id="mc_embed_signup">
 <form action="//designcoop.us16.list-manage.com/subscribe/post?u=627516cb06df0fe4a21fc42a6&amp;id=efb9220fe6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
+	
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_627516cb06df0fe4a21fc42a6_efb9220fe6" tabindex="-1" value=""></div>
@@ -57,6 +62,7 @@
     </div>
 </form>
 </div>
+
 
 <!--End mc_embed_signup-->
 
