final styling. part 231233

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	footer {clear:both; padding-top:60px;color:#777;font-size:16px;}
 
 	#mc_embed_signup { clear:left; font-size: 20px; width:100%; padding: 0;margin: 0; text-align: center;}
+	#mc_embed_signup form {padding: 0;margin: 0}
 	#mc_embed_signup input#mce-EMAIL {font-size: 20px; padding: 0; margin: 0 0 1em 0;}
 	#mc_embed_signup input.button {background-color:#FF007F; color:#FFF; font-size: 16px;}
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
