edited styling, minor content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>the Design Cooperative</title>
-<meta name="description" content="The design cooperative: Fresh ideas, served daily.">
+<meta name="description" content="the Design Cooperative: fresh ideas, served daily.">
 
 <link rel="canonical" href="http://designcoop.co/">
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
@@ -32,19 +32,21 @@
 	label {margin-right: 1em;}
 */
 
-	footer {clear:both; padding-top:60px;color:#777;font-size:16px;}
+	footer {clear: both; padding-top: 60px; color: #777; font-size: 16px;}
 
-	#mc_embed_signup { clear:left; font-size: 20px; width:100%; padding: 0;margin: 0; text-align: center;}
-	#mc_embed_signup form {padding: 0;margin: 0}
-	#mc_embed_signup input#mce-EMAIL {font-size: 20px; padding: 3px; margin: 0 0 1em 0;}
-	#mc_embed_signup input.button {background-color:#FF007F; color:#FFF; font-size: 20px;}
+	input {-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
+
+	#mc_embed_signup { clear:left; font-size: 20px; width: 100%; padding: 0; margin: 0; text-align: center;}
+	#mc_embed_signup form {padding: 0; margin: 0}
+	#mc_embed_signup input#mce-EMAIL {float: left; font-size: 20px; width: 20em; max-width: 100%; padding: .25em .5em; margin: 0 0 1em 0;}
+	#mc_embed_signup input.button {background-color: #FF007F; width: 10em; max-width: 100%; height: auto; padding-top: .25em; padding-bottom: .25em; color: #FFF; font-size: 20px;}
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 	We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 
 </style>
 </head>
 <body>
-<div style="width:65%; margin:auto; padding-top:47px;">
+<div style="width: 40em; max-width: 90%; margin: auto; padding-top: 3em;">
 <header>
 <h1><a href="/">the Design Cooperative</a></h1>
 </header>
@@ -53,7 +55,7 @@
 
 <p>It's our mission to make design methods for problem solving available to all through accessible apprenticeship.</p>
 
-<p>Stay in the loop and shape the future of the coop through meetups and online conversation fall 2017.</p>
+<p>Stay in the loop and shape the future of the co-op. We'll be hosting meetups and online conversation throughout fall 2017.</p>
 
 <div id="mc_embed_signup">
 <form action="//designcoop.us16.list-manage.com/subscribe/post?u=627516cb06df0fe4a21fc42a6&amp;id=efb9220fe6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
