added favicon files and reference

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 <meta name="description" content="the Design Cooperative: fresh ideas, served daily.">
 
 <link rel="canonical" href="http://designcoop.co/">
-<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+
+<!-- icons for IE 9 and below -->
+<!--[if IE]><link rel="shortcut icon" href="images/favicon.ico"><![endif]-->
+
+<!-- icons for touch - iOS and Android 2.1+  --> 
+<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+
+<!-- icons for Firefox, Chrome, Safari, IE 11+ and Opera -->
+<link rel="icon" href="images/favicon.png">
 
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Proza+Libre" rel="stylesheet">
 <!-- <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
