--- a/index.html
+++ b/index.html
@@ -1,90 +1,64 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#" lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>the Design Cooperative</title>
-<meta name="description" content="the Design Cooperative: fresh ideas, served daily.">
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;"/>	
+	<!-- Facebook preview image -->
+	<!-- <meta property="og:image" content=""/> -->
 
-<link rel="canonical" href="http://designcoop.co/">
+	<!-- icons for IE 9 and below -->
+	<!--[if IE]><link rel="shortcut icon" href="assets/images/favicon.ico"><![endif]-->
 
-<!-- icons for IE 9 and below -->
-<!--[if IE]><link rel="shortcut icon" href="images/favicon.ico"><![endif]-->
+	<!-- icons for touch - iOS and Android 2.1+  --> 
+	<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
 
-<!-- icons for touch - iOS and Android 2.1+  --> 
-<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	<!-- icons for Firefox, Chrome, Safari, IE 11+ and Opera -->
+	<link rel="icon" href="assets/images/favicon.png">
 
-<!-- icons for Firefox, Chrome, Safari, IE 11+ and Opera -->
-<link rel="icon" href="images/favicon.png">
+	<title>the Design Cooperative</title>
+	<meta name="description" content="the Design Cooperative: fresh ideas, served daily.">
 
-<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Proza+Libre" rel="stylesheet">
-<!-- <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
- -->
- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+	<link rel="canonical" href="http://designcoop.co/">
 
-<style type="text/css">
+	<link rel="stylesheet" href="assets/css/style.css">
 
-	body {background-color:#eaeaef;font-family:"Proza Libre",sans-serif}
-	h1,h2,h3,h4,h5,h6 {color:#2ae;font-family:"Cormorant Garamond",sans-serif;font-size:48px;font-weight:700;}
-	footer, p, li {color:#562800;font-family:"Proza Libre",sans-serif;font-size:20px;font-weight:400;line-height:1.42857}
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Proza+Libre" rel="stylesheet">
 
-	a {color:#FF007F;text-decoration:none}
-	a:visited {color:#FF117F}
-	a:hover {color:#FF88BF;text-decoration:underline}
-
-/*	ul {list-style:none;text-align:center;padding:0;margin:0}
-	li {float:left;margin:0;padding:0 1em 0 0;text-align:left;text-decoration:none}
-
-	label {margin-right: 1em;}
-*/
-
-	footer {clear: both; padding-top: 60px; color: #777; font-size: 16px;}
-
-	input {-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
-
-	#mc_embed_signup { clear:left; font-size: 20px; width: 100%; padding: 0; margin: 0; text-align: center;}
-	#mc_embed_signup form {padding: 0; margin: 0}
-	#mc_embed_signup input#mce-EMAIL {float: left; font-size: 20px; width: 20em; max-width: 100%; padding: .25em .5em; margin: 0 0 1em 0;}
-	#mc_embed_signup input.button {background-color: #FF007F; width: 10em; max-width: 100%; height: auto; padding-top: .25em; padding-bottom: .25em; color: #FFF; font-size: 20px;}
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-
-</style>
 </head>
+
 <body>
-<div style="width: 40em; max-width: 90%; margin: auto; padding-top: 3em;">
-<header>
-<h1><a href="/">the Design Cooperative</a></h1>
-</header>
+	<div id="wrapper">
+		<div id="content">
+			<header>
+				<h1><a href="/">the Design Cooperative</a></h1>
+			</header>
 
-<p>We believe a worker-run cooperative can transform lives and communities.<p>
+			<p>We believe a worker-run cooperative can transform lives and communities.<p><p>It's our mission to make design methods for problem solving available to all through accessible apprenticeship.</p><p>Stay in the loop and shape the future of the co-op. We'll be hosting meetups and online conversation throughout fall 2017.</p>
 
-<p>It's our mission to make design methods for problem solving available to all through accessible apprenticeship.</p>
+			<div id="mc_embed_signup">
+				<form action="//designcoop.us16.list-manage.com/subscribe/post?u=627516cb06df0fe4a21fc42a6&amp;id=efb9220fe6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+		    		<div id="mc_embed_signup_scroll">
+						<input class="field" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+		    			
+		    			<!-- DO NOT REMOVE -->
+		    			<div style="position: absolute; left: -5000px;" aria-hidden="true">
+		    				<input type="text" name="b_627516cb06df0fe4a21fc42a6_efb9220fe6" tabindex="-1" value="">
+		    			</div>
 
-<p>Stay in the loop and shape the future of the co-op. We'll be hosting meetups and online conversation throughout fall 2017.</p>
+		    			<div class="clear">
+		    				<input class="button" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+		    			</div>
+		    		</div>
+				</form>
+			</div>
 
-<div id="mc_embed_signup">
-<form action="//designcoop.us16.list-manage.com/subscribe/post?u=627516cb06df0fe4a21fc42a6&amp;id=efb9220fe6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_627516cb06df0fe4a21fc42a6_efb9220fe6" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
-
-
-<!--End mc_embed_signup-->
-
-
-<footer>
-&copy; 2017 Design Cooperative
-</footer>
-
-</div>
+			<footer class="clear">
+				<h3><a href="https://trello.com/b/zeqDPLAA/design-cooperative-roadmap">Roadmap</a> / &copy; 2017 Design Cooperative</h3>
+			</footer>
+		</div>
+	</div>
 </body>
+
 </html>
