added link to GitHub in code, fixed spacing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#" lang="en">
 
 <head>
+	<!-- Peeking @ our code? It's all available at https://git.io/v5pJ8 --> 
+
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;"/>	
 	<!-- Facebook preview image -->
