--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</div>
 
 			<footer class="clear">
-				<h3><a href="https://trello.com/b/zeqDPLAA/design-cooperative-roadmap">Roadmap</a> / &copy; 2017 Design Cooperative</h3>
+				<h3><a href="https://trello.com/b/PoGlOFGm/roadmap">Roadmap</a> / &copy; 2017 Design Cooperative</h3>
 			</footer>
 		</div>
 	</div>
