--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 {% include header.html %}
 
 <div id="manifesto">
-	<p>We believe a worker-run cooperative can transform lives and communities.<p><p>It's our mission to make design methods for problem solving available to all through accessible apprenticeship.</p><p>Stay in the loop and shape the future of the co-op. We'll be hosting meetups and online conversation throughout fall 2017.</p>
+	<p>We believe a worker-run cooperative can transform lives and communities.</p><p>It’s our mission to make design methods for problem solving available to all through accessible apprenticeship.</p><p>Stay in the loop and shape the future of the co-op. We’ll be hosting meetups and online conversation throughout fall 2017.</p>
 </div>
 
 <div id="subscribe">
-	<h3>the D.co inbox</h3>
+	<h3>the D.co outbox</h3>
 	<form action="//designcoop.us16.list-manage.com/subscribe/post?u=627516cb06df0fe4a21fc42a6&amp;id=efb9220fe6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 			<div class="mc-field-group">
 				<input type="email" value="" name="EMAIL" class="field full-width required email" id="mce-EMAIL" placeholder="email address" required>
@@ -43,9 +43,5 @@
 			</script>
 	</form>
 </div>
-
-<footer class="clear">
-	<h3><a href="https://trello.com/b/PoGlOFGm/roadmap">Roadmap</a> / &copy; 2017 Design Cooperative</h3>
-</footer>
 
 {% include footer.html %}
